src/styles/contact.scss
.contact_wrapper {
  padding: 1.0625rem;
  width: 100%;
  min-height: 100vh;
  font-family: "Inter", sans-serif;
}
.contact {
  max-width: 720px;
  padding-top: 4rem;
  margin: auto;
  .heading,
  .subheading {
    text-align: left;
    padding: 0.625rem 0;
  }
  .subheading {
    color: $contact_primary;
    font-size: 1.25rem;
    font-weight: 25rem;
  }
  label {
    font-weight: 500;
    font-size: 14px;
    white-space: nowrap;
  }
  .heading {
    font-weight: 600;
    font-size: 2.25rem;
    line-height: 2.75rem;
    letter-spacing: -0.02em;
    color: $contact_header;
  }

  .form {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
    padding: 2.375rem 0;
    .name {
      width: 100%;
      display: flex;
      justify-content: space-between;
      input {
        display: block;
        width: 21.75rem;
        margin-top: 0.375rem;
      }
    }
    #email,
    #message,
    .button {
      width: 100%;
      display: block;
      margin-top: 0.375rem;
    }
    input:not([type="checkbox"]) {
      height: 2.75rem;
      color: $footer;
      padding: 0.875rem;
      border: 1px solid #d0d5dd;
      box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
      border-radius: 8px;
      outline: none;
    }
    #message {
      color: $footer;
      font-family: "Inter", sans-serif;
      height: 8.25rem;
      padding: 0.875rem;
      border: 1px solid #d0d5dd;
      box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
      border-radius: 8px;
      outline: none;
    }
    .check_text {
      display: inline-block;
      word-wrap:normal;
      white-space: normal;
      padding: 0 .75rem;
      font-weight: 400px;
      font-size: 1rem;
      line-height: 24px;
      color: $contact_primary;
    }
    #btn_submit {
      width: 100%;
      background-color: $contact_btn;
      color: white;
      font-weight: 37.5rem;
      border: none;
      height: 2.75rem;
      border-radius: 8px;
    }
  }
}
@media (max-width: 770px) {
    :root{
     font-size: 16px;
    }
    
    .checkbox_align{
        display: flex !important;
        align-items: flex-start !important;
    }
  .name {
    flex-direction: column;
    gap: 24px;
    input {
      width: 100% !important;
    }
  }
}

